[package]
name = "diffuser-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared definition for diffuser parsers"
repository = "https://github.com/oovm/diffuser-types"
documentation = "https://docs.rs/diffuser-scheduler"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pex = { version = "0.0.1" }
serde = { version = "1.0.154", optional = true }
log = "0.4.17"

[dev-dependencies]
serde_json = "1.0.94"

[features]
default = []
